vnx-srv6/clabernetes/localkindCluster/conf/k8s/k8s-examples/web/nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 80
  selector:
    app: nginx-web-server
