vnx-srv6/clabernetes/localkindCluster/conf/k8s/k8s-examples/web/nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 80
    nodePort: 30000
  selector:
    app: nginx-web-server
