vnx-srv6/clabernetes/localkindCluster/conf/k8s/k8s-examples/web/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  defaultBackend:
#    service:
#      name: nginx-service
#      port:
#        number: 9090
  rules:
  - host: example.pagoda.local
    http:
      paths:
      - pathType: Prefix
        path: /path
        backend:
          service:
            name: nginx-service
            port:
              number: 9090
